[package]
name = "auto-wuthering-waves"
version = "0.1.0"
edition = "2021"

[dependencies]
aah-controller.workspace = true
aah-cv.workspace = true
anyhow.workspace = true
chrono = "0.4.39"
color-print = "0.3.7"
image.workspace = true
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.43.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_UI_Shell",
]}
